--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.joshicodes</groupId>
-    <artifactId>RJA</artifactId>
+    <artifactId>rja</artifactId>
     <version>1.0-alpha.3</version>
 
     <description>
@@ -24,6 +24,14 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/JoshiCodes/RJA</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
 
