Added Messages, EmbedMessages and MessageReceiver
Moved UserStatus and corresponding Classes to de.joshicodes.rja.object.user
Created RJAColor to represent Colors with the ability to create Gradients.
Added custom Headers to HttpUtil.sendRequest and RestRequest
Added RJA#retrieveDirectChannel and RJA#retrieveTextChannel
Changed RestRequest#fetch to accept JsonElements
modified the pom.xml with a custom .jar name and updated the project version
Created the OpenDirectMessageRequest and MessageSendRequest together with the MessageSendAction
Created a MessageReceiver to send Messages to
Created Message#from
Made DirectChannel#from actually work
Removed DisabledCacheException.java
Created the MessageEmbed and EmbedBuilder classes to represent and build Embeds

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.joshicodes</groupId>
     <artifactId>rja</artifactId>
-    <version>1.0-alpha.5b</version>
+    <version>1.0-alpha.5c</version>
 
     <description>
         RJA is a Java Library for the Revolt API.
@@ -24,6 +24,10 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <build>
+        <finalName>RJA-${version}</finalName>
+    </build>
 
     <distributionManagement>
         <repository>
