--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.joshicodes</groupId>
     <artifactId>rja</artifactId>
-    <version>1.0-alpha.5d</version>
+    <version>1.0-alpha.6</version>
 
     <description>
         RJA is a Java Library for the Revolt API.
