--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.joshicodes</groupId>
     <artifactId>rja</artifactId>
-    <version>1.0-alpha.7a</version>
+    <version>1.0-alpha.8</version>
 
     <description>
         Simple Java API for Revolt.
