--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.joshicodes</groupId>
     <artifactId>rja</artifactId>
-    <version>1.0-beta.1</version>
+    <version>1.0-beta.1a</version>
 
     <description>
         Simple Java API for Revolt.
